tests/golden/parser/accept/closure_expr.rua
fn main() {
    let increment = |value| value + 1;
    let forty_two = || 42;
}
