tests/golden/parser/reject/incomplete_closure.rua
fn main() {
    let broken = |value value + 1;
}
